@@ -21,7 +21,7 @@
 #include "serial.h"
 
 #define DRIVER_NAME	"Ever UPS driver (serial)"
-#define DRIVER_VERSION	"0.09"
+#define DRIVER_VERSION	"0.10"
 
 /* driver description structure */
 upsdrv_info_t upsdrv_info = {
@@ -87,6 +87,8 @@ static const char *GetTypeUpsName(void)
 
 void upsdrv_initinfo(void)
 {
+	InitUpsType();
+
 	dstate_setinfo("ups.mfr", "Ever");
 	dstate_setinfo("ups.model", "%s", GetTypeUpsName());
 
@@ -238,7 +240,6 @@ void upsdrv_initups(void)
 	ser_set_speed(upsfd, device_path, B300);
 
 	init_serial();
-	InitUpsType();
 }
 
 void upsdrv_cleanup(void)
