@@ -56,7 +56,8 @@ https://github.com/networkupstools/nut/milestone/12
      framework introduced a `upsdrv_tweak_prognames()` hook method to let
      them manipulate the array of `prognames[]` aliases. [PR #3101]
 
- - `asem`, `bestfortress`, `bestuferrups`, `bicker_ser` driver updates:
+ - `asem`, `bestfortress`, `bestuferrups`, `bicker_ser`, `everups`
+   driver updates:
    * Moved code to align with NUT driver architecture, so `upsdrv_initups()`
      would focus on preparing communications, and `upsdrv_initinfo()` would
      actually talk to the device and set initial critical data values. [#1962]
